# vsix-downloader-for-sync-setting

./: .gitignore  Cargo.toml  README.md  extensions.yml  index.js  package-lock.json  package.json
public/: index.html
src/: main.rs
