[package]
name = "vsix-downloader"
version = "0.1.0"
edition = "2021"
description = "VSCode 확장 프로그램을 Open VSX에서 검색하고 VSCode Marketplace에서 VSIX 파일을 다운로드하는 Rust 명령줄 도구"
authors = ["Ham Myeongho"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17"
colored = "2.0"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
chrono = "0.4"
